--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -40,7 +41,8 @@
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
