--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.469.0",
     "mermaid": "^9.4.3",
     "next": "^15.0.0",
@@ -41,6 +42,7 @@
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.1.6",
     "zod": "^3.24.1"
   },
@@ -48,6 +50,9 @@
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "@next/eslint-plugin-next": "^14.0.4",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.1.6"
   },
